Update init db